# expenses-app

./: .gitignore  README.md  app.py  pyproject.toml
data/: sample_expenses.csv  schema.md
src/: __init__.py  calculations.py  constants.py  data_loader.py  ui_components.py  visualizations.py
tests/: __init__.py  test_calculations.py  test_data_loader.py
