[project]
name = "finance-dashboard"
version = "0.1.0"
description = "Minimal personal finance dashboard for Guillem & Veronica"
authors = [{ name = "Guillem Sala Fernandez" }]
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.32",
    "sqlalchemy>=2.0",
    "pandas>=2.2",
    "faker>=24.0",
    "plotly>=6.5.2",
    "openpyxl>=3.1.5",
    "pylint>=4.0.4",
    "ruff>=0.15.1",
]

[tool.uv]
dev-dependencies = [
    "black",
    "ruff",
]
